thdblog/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: thdblog-service
spec:
  selector:
    app: thdblog-react
  ports:
  - protocol: TCP
    port: 80 # Port the service will be available on within the cluster
    targetPort: 80 # Port on the pod
  type: ClusterIP
