thdblog/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: thdblog-ingress
  namespace: argocd
  annotations:
    # cert-manager.io/cluster-issuer: letsencrypt-prod
    cert-manager.io/cluster-issuer: letsencrypt-staging
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    # nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  ingressClassName: nginx # Important: specifies to use the NGINX Ingress Controller
  rules:
  - host: wiki.polodev.com # Replace with your actual domain or use a test domain
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: thdblog-service
            port:
              number: 80
  tls:
  - hosts:
    - wiki.polodev.com
    secretName: wiki-polodev-tls # as expected by argocd-server
